Improving the texture, adding some folders, adding a custom creative mod tab for BOOM Arrow items

--- a/src/main/resources/assets/boomarrow/lang/en_us.json
+++ b/src/main/resources/assets/boomarrow/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.boomarrow.boom_arrow": "BOOM Arrow"
+  "item.boomarrow.boom_arrow": "BOOM Arrow",
+
+  "itemGroup.boomarrowtab": "BOOM Arrow Tab"
 }
