Adding new arrows and recipes in a very clumsy way - ideally, the plus variants should just be extensions of the base variant, but I'll refactor later

--- a/src/main/resources/assets/makeitboom/lang/en_us.json
+++ b/src/main/resources/assets/makeitboom/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.makeitboom.boom_arrow": "BOOM Arrow",
+  "item.makeitboom.boom_arrow_plus_one": "BOOM Arrow +1",
+  "item.makeitboom.boom_arrow_plus_two": "BOOM Arrow +2",
 
   "itemGroup.makeitboomtab": "Make It BOOM Tab"
 }
